munit/v/1.2/set-message-processor.adoc
= 设置消息处理器
：版本信息：3.7.0和更新
:keywords: munit, testing, unit testing

== 概述

由MUnit提供的设置消息处理器允许您定义Mule消息。

该消息处理器通常在MUnit测试开始时使用，以定义要发送到正在测试的流的第一条消息。

== 定义消息

下面的例子显示了如何定义一个简单的Mule消息。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set-payload-munit.png[set-payload-munit]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:set payload="#[]">
</munit:set>
----
....
------


[%header%autowidth.spread]
|===
|属性名称 |描述

| `payload`
|定义有效负载消息的值。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `encoding`
|定义消息的编码。这个属性是可选的。

| `mimeType`
|定义消息的MIME类型。这个属性是可选的。

|===

提示：如果您希望将有效负载设置为Spring bean，则可以使用MUnit MEL函数`getBeanFromMuleContext('bean_name')`。有关详细信息，请参阅 link:/munit/v/1.2/assertion-message-processor[断言]。

== 定义消息属性

使用MUnit `Set`消息处理器，您可以轻松指定任何作用域的消息属性。

下面的示例显示了如何定义每个属性作用域之一：


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set-payload-munit-2.png[set-payload-munit-2]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:set payload="#[]">
  <munit:invocation-properties>
    <munit:invocation-property key="key" value="#['value']"/>
  </munit:invocation-properties>

  <munit:inbound-properties>
    <munit:inbound-property key="key" value="#['value']"/>
  </munit:inbound-properties>

  <munit:session-properties>
    <munit:session-property key="key" value="#['value']"/>
  </munit:session-properties>

  <munit:outbound-properties>
    <munit:outbound-property key="key" value="#['value']"/>
  </munit:outbound-properties>
</munit:set>
----
....
------

所有属性都具有相同的一组属性：

[%header%autowidth.spread]
。属性消息处理器的属性
|===
|属性名称 |描述

| `key`
|设置属性的关键。

| `value`
|属性的内容。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `encoding`
|定义消息的编码。这个属性是可选的。

| `mimeType`
|定义消息的MIME类型。这个属性是可选的。

|===

您可以根据您的测试需要为每个范围定义多个属性。

警告：如果使用_same_键在同一范围内定义两个属性，请注意最终会覆盖另一个属性。

== 定义空净负荷

在Mule中，消息有效载荷永远不会包含Null。相反，Mule有一个名为`NullPayload`的表示。

在某些情况下，您的测试需要您发送此类有效负载。对于这些情况，MUnit提供了`null-payload`消息处理器。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set-null-payload-munit.png[set-null-payload-munit]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml,linenums]
----
<munit:set-null-payload/>
----
....
------


